--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <!-- All meta links for SEO and social previews -->
+    <title>Protein Explorer</title>
+    <meta property="og:title" content="Protein Explorer" />
+    <meta name="twitter:title" content="Protein Explorer" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:image" content="https://theplotline.org/public/og_image.jpg" />
+    <meta name="twitter:image" content="https://theplotline.org/public/og_image.jpg" />
+
+    <meta name="description" content="Protein Explorer game from the Plotline." />
+    <meta property="og:description" content="Protein Explorer game from the Plotline." />
+    <meta name="twitter:description" content="Protein Explorer game from the Plotline." />
+
+    <meta name="twitter:site" content="@the_plotline" />
+    <meta property="og:url" content="https://earthrise-media.github.io/protein-explorer" />
+
+    %sveltekit.head%
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+  </body>
 </html>
