Add placeholder cover image

--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="icon" href="%sveltekit.assets%/img/favicon.png" />
 
     <meta
       name="viewport"
