--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <!-- All meta links for SEO and social previews -->
-    <title>Protein Explorer</title>
+    <!-- <title>Protein Explorer</title>
     <meta property="og:title" content="Protein Explorer" />
     <meta name="twitter:title" content="Protein Explorer" />
 
@@ -22,7 +22,7 @@
     <meta name="twitter:description" content="Protein Explorer game from the Plotline." />
 
     <meta name="twitter:site" content="@the_plotline" />
-    <meta property="og:url" content="https://earthrise-media.github.io/protein-explorer" />
+    <meta property="og:url" content="https://earthrise-media.github.io/protein-explorer" /> -->
 
     %sveltekit.head%
   </head>
