--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/img/favicon.png" />
+
+    <link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/brand/icon.svg" />
+    <link rel="alternate icon" type="image/png" href="%sveltekit.assets%/brand/icon@128.png" />
+    <link rel="apple-touch-icon" href="%sveltekit.assets%/brand/icon@128.png" sizes="128x128" />
 
     <meta
       name="viewport"
